[gd_scene load_steps=4 format=3 uid="uid://d2k4m5qnkqaw"]

[ext_resource type="Script" path="res://scripts/ui/life_support_warning.gd" id="1_warning"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_warning"]
bg_color = Color(0.3, 0.1, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_flash"]
length = 1.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WarningPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.5, 0.5, 0.8), Color(1, 1, 1, 1)]
}

[node name="LifeSupportWarning" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_warning")

[node name="WarningPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_warning")

[node name="VBoxContainer" type="VBoxContainer" parent="WarningPanel"]
layout_mode = 2

[node name="WarningTitle" type="Label" parent="WarningPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "LIFE SUPPORT WARNING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningMessage" type="Label" parent="WarningPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Oxygen levels critical"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"default": SubResource("Animation_flash")
}